# dexsim-examples

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: gbm.py
examples/arb/: config.yaml  main.py
examples/basics/: config.yaml  model-info.md  model.py  ui.py
examples/whales/: README.md  agents.py  analyze.py  config.yaml  main.py  model-info.md
examples/whales/data/: liquidity.parquet  trading.parquet
examples/whales/whales/: liquidity_provider.py  minnow.py  model.py  whale.py
