[build-system]
requires = ["hatchling==1.26.3"]
build-backend = "hatchling.build"

[project]
name = "dexsim-examples"
version = "0.1.0"
description = 'Examples'
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
keywords = [
  "uniswap",
  "agent-based modeling",
  "ethereum",
  "solidity",
  "simulation",
]
authors = [
  { name = "Dave Bryson", email = "davebryson@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
  "dexsim",
  "mesa>=3.0.0",
  "tqdm",
  "pandas",
  "omegaconf",
  "pyarrow",
  "matplotlib>=3.8.2",
  "streamlit",
]
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.envs.default]
dependencies = ["pytest"]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"

[[tool.hatch.envs.all.matrix]]
python = ["3.11", "3.12"]
